Also include the common root, even if it is absent. This avoids mixing multiple roots from different levels in the tree.